# Backend

./: .env.example  .gitignore  README.md  pyproject.toml  reference.ipynb  requirements.txt  run.py  test.py
app/: main.py
app/agent/: __init__.py  graph.py  nodes.py  state.py  tools.py
app/agent/main_agent/: __init__.py  graph.py  nodes.py  state.py
app/api/: __init__.py  models.py
app/api/routes/: __init__.py  deepfake_check.py  read_image.py  read_video.py  run_agent.py
app/core/: __init__.py  settings.py
app/models/: __init__.py  client.py  confidence_model_lgbm.joblib  llm.py
app/prompts/: confidence_scoring_features_prompt.txt  explainer_system_prompt.txt  extract_claim_system_prompt.txt
app/services/: __init__.py  claim_extractor.py  confidence_scorer.py  deepfake_detection.py
app/utils/: file_handler.py
