[project]
name = "gen-ai-exchange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.2.0",
    "fastapi>=0.116.1",
    "google-cloud-vision>=3.11.0",
    "google-genai>=1.31.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "ipynb>=0.5.1",
    "joblib>=1.5.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.28",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.3.32",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "langgraph-cli[inmem]>=0.4.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.1",
    "spacy>=3.8.7",
    "tldextract>=5.3.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "uvicorn>=0.35.0",
    "wikipedia>=1.4.0",
]
